# uspsa-clip-cutter

./: .gitignore  README.md  poll_and_run.sh  pyproject.toml
.github/workflows/: ci.yml
src/video_stage_cutter/: __init__.py  __main__.py  beep_detect.py  cli.py  cutter.py  ffmpeg_utils.py  manifest.py  metadata.py  phrase_detect.py  pipeline.py  transcribe.py
tests/: test_beep_detect.py  test_fixtures_phrase_detect.py  test_metadata.py  test_phrase_detect.py  test_pipeline_synthetic.py  test_real_transcripts.py
tests/fixtures/: README.md
tests/fixtures/transcripts/: real_dji_0287.json  real_dji_0288.json  real_dji_0291.json  real_dji_0292.json  real_dji_0293.json  real_dji_0294.json  real_dji_0295.json  real_dji_0297.json  real_dji_0297_001_large.json  real_dji_0297_001_small.json  real_dji_0298.json  real_dji_0298_large.json  real_dji_0299_001.json  real_dji_0299_002.json  stage_false_positive_noise.json  stage_fuzzy_bad_asr.json  stage_multiple_stages.json  stage_no_end.json  stage_no_start.json  stage_normal.json
